[project]
name = "mobility-mcp"
version = "0.1.0"
description = "Accessibility Mobility Context Router - MCP server for wheelchair-accessible route planning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.114.2",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "cachetools==5.5.0",
    "orjson==3.10.7",
    "mcp>=1.0.0",
    "ics==0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

